--- a/Exercicios/src/Components/Header/styles.css
+++ b/Exercicios/src/Components/Header/styles.css
@@ -3,6 +3,7 @@
     list-style-type: none;
     justify-content: flex-end;
     padding: 30px 40px;
+    text-align: center;
 }
 
 .menu-header li {
